; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_cpu_quiesce.c_cpu_quiescent_counter_set_min_interval_us.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_cpu_quiesce.c_cpu_quiescent_counter_set_min_interval_us.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPU_CHECKIN_MIN_INTERVAL_MAX_US = common dso_local global i64 0, align 8
@cpu_checkin_min_interval_us = common dso_local global i64 0, align 8
@NSEC_PER_USEC = common dso_local global i32 0, align 4
@cpu_checkin_min_interval = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cpu_quiescent_counter_set_min_interval_us(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @CPU_CHECKIN_MIN_INTERVAL_MAX_US, align 8
  %6 = icmp sgt i64 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i64, i64* @CPU_CHECKIN_MIN_INTERVAL_MAX_US, align 8
  store i64 %8, i64* %2, align 8
  br label %9

9:                                                ; preds = %7, %1
  %10 = load i64, i64* %2, align 8
  store i64 %10, i64* @cpu_checkin_min_interval_us, align 8
  store i32 0, i32* %3, align 4
  %11 = load i64, i64* @cpu_checkin_min_interval_us, align 8
  %12 = load i32, i32* @NSEC_PER_USEC, align 4
  %13 = call i32 @clock_interval_to_absolutetime_interval(i64 %11, i32 %12, i32* %3)
  %14 = load i32, i32* %3, align 4
  store i32 %14, i32* @cpu_checkin_min_interval, align 4
  ret void
}

declare dso_local i32 @clock_interval_to_absolutetime_interval(i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
